--- a/Hixsa_Pets_BACK_JAVA/src/main/resources/application.properties
+++ b/Hixsa_Pets_BACK_JAVA/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.servlet.context-path=/hixsa-pets-api
 
 spring.jpa.database-platform=com.app.SQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#spring.jpa.show-sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
 spring.datasource.url = jdbc:sqlite:sqlite-hixsa-pets.db
